Fixed - align position in Blog card section

--- a/style.scss
+++ b/style.scss
@@ -170,40 +170,43 @@ progress::-webkit-progress-value {
       color: #4f4f4f;
     }
     .blog-card {
-      .info {
-        width: 50%;
-        justify-content: space-between;
-        span {
-          font-weight: 500;
-          font-size: 16px;
-          color: #e0e0e0;
-          margin-bottom: 10px;
-          @media (max-width: 1100px) {
-            font-size: 14px;
+      .row {
+        align-items: center;
+        .info {
+          width: 50%;
+          justify-content: space-between;
+          span {
+            font-weight: 500;
+            font-size: 16px;
+            color: #e0e0e0;
+            margin-bottom: 10px;
+            @media (max-width: 1100px) {
+              font-size: 14px;
+            }
+          }
+          h2 {
+            color: #333;
+            margin-bottom: 10px;
+          }
+          p {
+            width: 80%;
+            margin-bottom: 10px;
+            @media (max-width: 1100px) {
+              font-size: 14px;
+              width: 100%;
+            }
+          }
+          a {
+            text-decoration: none;
           }
         }
-        h2 {
-          color: #333;
-          margin-bottom: 10px;
-        }
-        p {
-          width: 60%;
-          margin-bottom: 10px;
-          @media (max-width: 1100px) {
-            font-size: 14px;
-            width: 100%;
+        .image {
+          width: 50%;
+          img {
+            border-radius: 12px;
+            max-width: 100%;
+            // height: 100%;
           }
-        }
-        a {
-          text-decoration: none;
-        }
-      }
-      .image {
-        width: 50%;
-        img {
-          border-radius: 12px;
-          max-width: 100%;
-          height: 100%;
         }
       }
     }
